[workspace]
resolver = "2"
members = [
  "contracts/strategy_interface",
  "contracts/timelock",
  "contracts/vault",
  "contracts/controller",
  "contracts/blend_strategy",
  "contracts/amm_strategy",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.7" }
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
