[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
strategy-interface = { path = "../strategy_interface" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
